--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   </head> 
 <body>
-<h1 class="header-main">Discover hidden places in the World around you</h1>    
-<p><a href="#">Download Excursion (Coming soon!)</a></p>
-
+    <h1 class="header-main">Discover hidden places in the World around you</h1>    
+    <p><a class="link-cta" href="#">Download Excursion (Coming soon!)</a></p>
+    <video autoplay loop>
+        <source src="resources/css/videos/excursion.mp4" type="video/mp4">
+    </video>
 </body>
 </html>
