Added images and subheader

--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
     <video autoplay loop>
         <source src="resources/css/videos/excursion.mp4" type="video/mp4">
     </video>
+    <h1 class="header-title">Your personal travel guide</h1>
+    <h4 class="header-desc">Excursion remembers places you like, and recommends new points of interest around you.</h4>
+    <p><img src="resources/css/videos/images/camp.jpg"></p>
+    <p><img src="resources/css/videos/images/phone.png"></p>
+    
 </body>
 </html>
