--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <h4 class="header-desc">Excursion remembers places you like, and recommends new points of interest around you.</h4>
     <p><img src="resources/css/videos/images/camp.jpg"></p>
     <p><img src="resources/css/videos/images/phone.png"></p>
-    
+    <h1 class="header-title">Coming soon for iPhone and Android</h1>
+    <p><a class="link-cta" href="#">Download Excursion (Coming soon!)</a></p>
 </body>
+<footer>
+    <p class="copyright">&copy;Excursion</p>
+</footer>
 </html>
